--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8" />
 
-    <title>Style Checkboxs and Radio Buttons using CSS custom properties</title>
+    <title>Style Checkboxs using CSS custom properties</title>
 
-    <meta name="description" content="Style Checkboxs and Radio Buttons using CSS custom properties">
-    <meta property="og:description" content="Style Checkboxs and Radio Buttons using CSS custom properties">
-    <meta property="og:title" content="Style Checkboxs and Radio Buttons using CSS custom properties">
+    <meta name="description" content="Style Checkboxs using CSS custom properties">
+    <meta property="og:description" content="Style Checkboxs using CSS custom properties">
+    <meta property="og:title" content="Style Checkboxs using CSS custom properties">
     <meta property="og:url" content="http://katheermizal.info/blog/?p=1">
     <meta property="og:site_name" content="npm">
     <meta name="keywords" content="css, checkbox, , radio button ,style, form , title">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="http://katheermizal.info/blog/?p=1">
-    <meta name="twitter:title" content="Style Checkboxs and Radio Buttons using CSS custom properties">
-    <meta name="twitter:description" content="Style Checkboxs and Radio Buttons using CSS custom properties">
+    <meta name="twitter:title" content="Style Checkboxs using CSS custom properties">
+    <meta name="twitter:description" content="Style Checkboxs using CSS custom properties">
     <meta http-equiv="cleartype" content="on" />
     <meta name="apple-mobile-web-app-capable" content="no">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,initial-scale=1,user-scalable=yes">
@@ -28,97 +28,111 @@
         << Back To The Article</a>
             <a href="https://github.com/Katheer/Css-tooltip" class="github">Git Hub</a>
             <main>
-                <h1>Style Checkboxs and Radio Buttons using CSS custom properties</h1>
+                <h1>Style Checkboxs using CSS custom properties</h1>
                 <section>
-                    <h2>Check Boxes</h2>
+					<h2 hidden>Check boxes</h2>
                     <ul>
-                        <li class="checkbox-li-a"> 
-							<label for="checkbox-a">Checkbox 1</label>
-							<input type="checkbox" id="checkbox-a" name="checkbox"/>
-						</li>
-                        <li class="checkbox-li-b"> 
-							<label for="checkbox-b">Checkbox 2</label>
-							<input type="checkbox" id="checkbox-b" name="checkbox"/>
-						</li>
-                        <li class="checkbox-li-c"> 
-							<label for="checkbox-c">Checkbox 3</label>
-							<input type="checkbox" id="checkbox-c" name="checkbox"/>
-						</li>
-                        <li class="checkbox-li-d"> 
-							<label for="checkbox-d">Checkbox 4</label>
-							<input type="checkbox" id="checkbox-d" name="checkbox"/>
-						</li>
-						
-                        <li class="checkbox-li-e"> 
-							<label for="checkbox-e">Checkbox 5</label>
-							<input type="checkbox" id="checkbox-e" name="checkbox"/>
-						</li>
-                        <li class="checkbox-li-e"> 
-							<label for="checkbox-e">Checkbox 6</label>
-							<input type="checkbox" id="checkbox-e" name="checkbox"/>
-						</li>
-                        <li class="checkbox-li-e"> 
-							<label for="checkbox-e">Checkbox 7</label>
-							<input type="checkbox" id="checkbox-e" name="checkbox"/>
-						</li>
-                        <li class="checkbox-li-f"> 
-							<label for="checkbox-f">Checkbox 8</label>
-							<input type="checkbox" id="checkbox-f" name="checkbox"/>
-						</li>
-                    </ul>
-                </section>
-				<section>
-                    <h2>Radio Buttons</h2>
-                    <ul>
-                        <li class="radiobutton-li-a"> 
-							<label for="radiobutton-a">Option 1</label>
-							<input type="radio" value="radiooption" id="radiobutton-a" name="radio-a" checked/>
-							<label for="radiobutton-b">Option 2</label>
-							<input type="radio" value="radiooption" id="radiobutton-b" name="radio-a"/>
-						</li>
-                        <li class="radiobutton-li-b"> 
-							<label for="radiobutton-c">Option 1</label>
-							<input type="radio" value="radiooption" id="radiobutton-c" name="radio-b" checked/>
-							<label for="radiobutton-d">Option 2</label>
-							<input type="radio" value="radiooption" id="radiobutton-d" name="radio-b"/>
-						</li>
-                        <li class="radiobutton-li-c"> 
-							<label for="radiobutton-e">Option 1</label>
-							<input type="radio" value="radiooption" id="radiobutton-e" name="radio-c" checked/>
-							<label for="radiobutton-f">Option 2</label>
-							<input type="radio" value="radiooption" id="radiobutton-f" name="radio-c"/>
-						</li>
-                        <li class="radiobutton-li-d"> 
-							<label for="radiobutton-g">Option 1</label>
-							<input type="radio" value="radiooption" id="radiobutton-g" name="radio-d" checked/>
-							<label for="radiobutton-h">Option 2</label>
-							<input type="radio" value="radiooption" id="radiobutton-h" name="radio-d"/>
-						</li>
-						
-                        <li class="radiobutton-li-e"> 
-							<label for="radiobutton-i">Option 1</label>
-							<input type="radio" value="radiooption" id="radiobutton-i" name="radio-e" checked/>
-							<label for="radiobutton-j">Option 2</label>
-							<input type="radio" value="radiooption" id="radiobutton-j" name="radio-e"/>
-						</li>
-                        <li class="radiobutton-li-e"> 
-							<label for="radiobutton-k">Option 1</label>
-							<input type="radio" value="radiooption" id="radiobutton-k" name="radio-f" checked/>
-							<label for="radiobutton-l">Option 2</label>
-							<input type="radio" value="radiooption" id="radiobutton-l" name="radio-f"/>
-						</li>
-                        <li class="radiobutton-li-e"> 
-							<label for="radiobutton-m">Option 1</label>
-							<input type="radio" value="radiooption" id="radiobutton-m" name="radio-g" checked/>
-							<label for="radiobutton-n">Option 2</label>
-							<input type="radio" value="radiooption" id="radiobutton-n" name="radio-g"/>
-						</li>
-                        <li class="radiobutton-li-f"> 
-							<label for="radiobutton-o">Option 1</label>
-							<input type="radio" value="radiooption" id="radiobutton-o" name="radio-h" checked/>
-							<label for="radiobutton-p">Option 2</label>
-							<input type="radio" value="radiooption" id="radiobutton-p" name="radio-h"/>
-						</li>
+                        <li>
+                            <input type="checkbox" id="checkbox-a" name="checkbox" />
+                            <label for="checkbox-a">Checkbox 1</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-b" name="checkbox" />
+                            <label for="checkbox-b">Checkbox 2</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-c" name="checkbox" />
+                            <label for="checkbox-c">Checkbox 3</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-d" name="checkbox" />
+                            <label for="checkbox-d">Checkbox 4</label>
+                        </li>
+
+                        <li>
+                            <input type="checkbox" id="checkbox-e" name="checkbox" />
+                            <label for="checkbox-e">Checkbox 5</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-f" name="checkbox" />
+                            <label for="checkbox-f">Checkbox 6</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-g" name="checkbox" />
+                            <label for="checkbox-g">Checkbox 7</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-h" name="checkbox" />
+                            <label for="checkbox-h">Checkbox 8</label>
+                        </li>
+
+                        <li>
+                            <input type="checkbox" id="checkbox-i" name="checkbox" />
+                            <label for="checkbox-i">Checkbox 9</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-j" name="checkbox" />
+                            <label for="checkbox-j">Checkbox 10</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-k" name="checkbox" />
+                            <label for="checkbox-k">Checkbox 11</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-l" name="checkbox" />
+                            <label for="checkbox-l">Checkbox 12</label>
+                        </li>
+
+                        <li>
+                            <input type="checkbox" id="checkbox-m" name="checkbox" />
+                            <label for="checkbox-m">Checkbox 13</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-n" name="checkbox" />
+                            <label for="checkbox-n">Checkbox 14</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-o" name="checkbox" />
+                            <label for="checkbox-o">Checkbox 15</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-p" name="checkbox" />
+                            <label for="checkbox-p"> </label>
+                        </li>
+
+                        <li>
+                            <input type="checkbox" id="checkbox-q" name="checkbox" />
+                            <label for="checkbox-q">Checkbox 17</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-r" name="checkbox" />
+                            <label for="checkbox-r">Checkbox 18</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-s" name="checkbox" />
+                            <label for="checkbox-s">Checkbox 19</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-t" name="checkbox" />
+                            <label for="checkbox-t">Checkbox 20</label>
+                        </li>
+
+                        <li>
+                            <input type="checkbox" id="checkbox-u" name="checkbox" />
+                            <label for="checkbox-u">Checkbox 21</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-v" name="checkbox" value="yes"/>
+                            <label for="checkbox-v" data-input-value="Yes">Checkbox 22</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-w" name="checkbox" value="No"/>
+                            <label for="checkbox-w" data-input-value="No">Checkbox 23</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="checkbox-x" name="checkbox" />
+                            <label for="checkbox-x">Checkbox 24</label>
+                        </li>						
                     </ul>
                 </section>
             </main>
