--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8" />
 
-    <title>Style Checkboxs using CSS custom properties</title>
+    <title>Style Checkboxes using CSS custom properties</title>
 
-    <meta name="description" content="Style Checkboxs using CSS custom properties">
-    <meta property="og:description" content="Style Checkboxs using CSS custom properties">
-    <meta property="og:title" content="Style Checkboxs using CSS custom properties">
+    <meta name="description" content="Style Checkboxes using CSS custom properties">
+    <meta property="og:description" content="Style Checkboxes using CSS custom properties">
+    <meta property="og:title" content="Style Checkboxes using CSS custom properties">
     <meta property="og:url" content="http://katheermizal.info/blog/?p=1">
     <meta property="og:site_name" content="npm">
     <meta name="keywords" content="css, checkbox, , radio button ,style, form , title">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="http://katheermizal.info/blog/?p=1">
-    <meta name="twitter:title" content="Style Checkboxs using CSS custom properties">
-    <meta name="twitter:description" content="Style Checkboxs using CSS custom properties">
+    <meta name="twitter:title" content="Style Checkboxes using CSS custom properties">
+    <meta name="twitter:description" content="Style Checkboxes using CSS custom properties">
     <meta http-equiv="cleartype" content="on" />
     <meta name="apple-mobile-web-app-capable" content="no">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,initial-scale=1,user-scalable=yes">
@@ -26,9 +26,9 @@
 <body>
     <a href="http://katheermizal.info/blog/?p=1" class="back-to-article">
         << Back To The Article</a>
-            <a href="https://github.com/Katheer/Css-tooltip" class="github">Git Hub</a>
+            <a href="https://github.com/Katheer/Working-with-checkbox" class="github">Git Hub</a>
             <main>
-                <h1>Style Checkboxs using CSS custom properties</h1>
+                <h1>Style Checkboxes - using CSS custom properties</h1>
                 <section>
 					<h2 hidden>Check boxes</h2>
                     <ul>
@@ -97,7 +97,7 @@
                         </li>
                         <li>
                             <input type="checkbox" id="checkbox-p" name="checkbox" />
-                            <label for="checkbox-p"> </label>
+                            <label for="checkbox-p">&nbsp;</label>
                         </li>
 
                         <li>
@@ -123,11 +123,11 @@
                         </li>
                         <li>
                             <input type="checkbox" id="checkbox-v" name="checkbox" value="yes"/>
-                            <label for="checkbox-v" data-input-value="Yes">Checkbox 22</label>
+                            <label for="checkbox-v" data-input-value="Yes">&nbsp;</label>
                         </li>
                         <li>
                             <input type="checkbox" id="checkbox-w" name="checkbox" value="No"/>
-                            <label for="checkbox-w" data-input-value="No">Checkbox 23</label>
+                            <label for="checkbox-w" data-input-value="No">&nbsp;</label>
                         </li>
                         <li>
                             <input type="checkbox" id="checkbox-x" name="checkbox" />
