--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 </head>
 
 <body>
-    <a href="http://katheermizal.info/blog/?p=1" class="back-to-article">
+    <a href="http://katheermizal.info/blog/?p=86" class="back-to-article">
         << Back To The Article</a>
             <a href="https://github.com/Katheer/Working-with-checkbox" class="github">Git Hub</a>
             <main>
-                <h1>Style Checkboxes - using CSS custom properties</h1>
+                <h1>Style Checkbox - using CSS custom properties</h1>
                 <section>
 					<h2 hidden>Check boxes</h2>
                     <ul>
